installed react client app with vite

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,6 +1,5 @@
 # Node modules (for both client and server)
-server/node_modules/
-client/node_modules/
+node_modules/
 
 # Environment variables
 .env
