--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^4.21.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.10.1",
     "socket.io": "^4.8.1"
   }
