--- a/socket-io-chat/package.json
+++ b/socket-io-chat/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
